[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rocketry-scheduler"
version = "0.1.0"
description = "Rocketry cron job via Nixpacks"
authors = [{ name = "Your Name", email = "you@example.com" }]
dependencies = [
    "rocketry",
    "requests",
    "pydantic<2.0"
]

[tool.setuptools]
py-modules = ["main"]
